inquirer prompts are connected and working properly

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <title>Document</title>
 </head>
 <body>
-    
+  <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h3>Example heading <span class="badge badge-secondary">Contact Me</span></h3>
+    <ul class="list-group">
+    <li class="list-group-item">Manager's Name: Ricky</li>
+      <li class="list-group-item">Manager's ID: 12</li>
+      <li class="list-group-item">Manager Office: d</li>
+      <li class="list-group-item">Manager's Email: r</li>
+      <li class="list-group-item">Manager's Github: dsdf</li>
+    </ul>
+  </div>
+</div>
 </body>
 </html>
