--- a/index.html
+++ b/index.html
@@ -4,20 +4,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <title>Document</title>
+  <title>Team Profile Generator</title>
 </head>
 <body>
-  <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h3>Example heading <span class="badge badge-secondary">Contact Me</span></h3>
-    <ul class="list-group">
-    <li class="list-group-item">Manager's Name: Ricky</li>
-      <li class="list-group-item">Manager's ID: 12</li>
-      <li class="list-group-item">Manager Office: d</li>
-      <li class="list-group-item">Manager's Email: r</li>
-      <li class="list-group-item">Manager's Github: dsdf</li>
-    </ul>
-  </div>
-</div>
+  <main class="container">
+    <div class="row ">
+        <div class="card col-3 mb-3">
+          <div class="card-body">
+          <h5 class="card-title"></h5>
+          <h6 class="card-subtitle"></h6>
+          <ul class="card-text">
+            <li></li>
+            <li> <a href="mailto:test@gmail.com" target="_blank" class="btn btn-primary"></a></li>
+            <li></li>
+          </ul>
+          </div>
+        </div>
+        <div class="card col-3 mb-3">
+        <div class="card-body">
+        <h5 class="card-title"></h5>
+        <h6 class="card-subtitle"></h6>
+        <ul class="card-text">
+          <li></li>
+          <li><a href="mailto:test@gmail.com" target="_blank" class="btn btn-primary"></a></li>
+          <li></li>
+        </ul>
+        </div>
+        </div><div class="card col-3 mb-3">
+        <div class="card-body">
+        <h5 class="card-title"></h5>
+        <h6 class="card-subtitle"></h6>
+        <ul class="card-text">
+          <li></li>
+          <li><a href="mailto:test@gmail.com" target="_blank" class="btn btn-primary"></a></li>
+          <li></li>
+        </ul>
+        </div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
