finalized code but missing readme

--- a/index.html
+++ b/index.html
@@ -7,41 +7,44 @@
   <title>Team Profile Generator</title>
 </head>
 <body>
-  <main class="container">
-    <div class="row ">
-        <div class="card col-3 mb-3">
-          <div class="card-body">
-          <h5 class="card-title"></h5>
-          <h6 class="card-subtitle"></h6>
+  <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h3>Current Team</h3>
+    <ul class="list-group">
+    <li class="list-group-item"><div class="card col-3 mb-3">
+      <div class="card-body">
+          <h1 class="card-title">Steven</h1>
+          <h4 class="card-subtitle">Manager</h4>
           <ul class="card-text">
-            <li></li>
-            <li> <a href="mailto:test@gmail.com" target="_blank" class="btn btn-primary"></a></li>
-            <li></li>
+              <li><strong>ID #: </strong>123</li>
+              <li><strong>Email: </strong>steven@gmail.com</li>
+              <li><strong>Office #: </strong>28127</li>
+              <li><strong>Github Username: </strong>stevenbossman</li>
           </ul>
-          </div>
-        </div>
-        <div class="card col-3 mb-3">
-        <div class="card-body">
-        <h5 class="card-title"></h5>
-        <h6 class="card-subtitle"></h6>
-        <ul class="card-text">
-          <li></li>
-          <li><a href="mailto:test@gmail.com" target="_blank" class="btn btn-primary"></a></li>
-          <li></li>
-        </ul>
-        </div>
-        </div><div class="card col-3 mb-3">
-        <div class="card-body">
-        <h5 class="card-title"></h5>
-        <h6 class="card-subtitle"></h6>
-        <ul class="card-text">
-          <li></li>
-          <li><a href="mailto:test@gmail.com" target="_blank" class="btn btn-primary"></a></li>
-          <li></li>
-        </ul>
-        </div>
-        </div>
-    </div>
-</main>
+      </div>
+  </div><div class="card col-3 mb-3">
+      <div class="card-body">
+          <h1 class="card-title">Cassie</h1>
+          <h4 class="card-subtitle">Engineer</h4>
+          <ul class="card-text">
+              <li><strong>SID #: </strong>184</li>
+              <li><strong>SEmail: </strong>cassieo@gmail.com</li>
+              <li><strong>SGithub Username: </strong>cassieo</li>
+          </ul>
+      </div>
+  </div><div class="card col-3 mb-3">
+      <div class="card-body">
+          <h1 class="card-title">Roberto</h1>
+          <h4 class="card-subtitle">Intern</h4>
+          <ul class="card-text">
+              <li><strong>ID: </strong>2917243</li>
+              <li><strong>Email: </strong>robertointern@gmail.com</li>
+              <li><strong>School: </strong>UW</li>
+          </ul>
+      </div>
+  </div></li>
+    </ul>
+  </div>
+</div>
 </body>
 </html>
