finalized read-me

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
           <h1 class="card-title">Steven</h1>
           <h4 class="card-subtitle">Manager</h4>
           <ul class="card-text">
-              <li><strong>ID #: </strong>123</li>
+              <li><strong>ID #: </strong>12</li>
               <li><strong>Email: </strong>steven@gmail.com</li>
-              <li><strong>Office #: </strong>28127</li>
-              <li><strong>Github Username: </strong>stevenbossman</li>
+              <li><strong>Office #: </strong>826</li>
+              <li><strong>Github Username: </strong>stevenrocks</li>
           </ul>
       </div>
   </div><div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Cassie</h1>
+          <h1 class="card-title">Samantha</h1>
           <h4 class="card-subtitle">Engineer</h4>
           <ul class="card-text">
-              <li><strong>SID #: </strong>184</li>
-              <li><strong>SEmail: </strong>cassieo@gmail.com</li>
-              <li><strong>SGithub Username: </strong>cassieo</li>
+              <li><strong>ID #: </strong>42</li>
+              <li><strong>Email: </strong>samantharules@gmail.com</li>
+              <li><strong>Github Username: </strong>samantharules</li>
           </ul>
       </div>
   </div><div class="card col-3 mb-3">
@@ -37,7 +37,7 @@
           <h1 class="card-title">Roberto</h1>
           <h4 class="card-subtitle">Intern</h4>
           <ul class="card-text">
-              <li><strong>ID: </strong>2917243</li>
+              <li><strong>ID: </strong>283471</li>
               <li><strong>Email: </strong>robertointern@gmail.com</li>
               <li><strong>School: </strong>UW</li>
           </ul>
