--- a/index.html
+++ b/index.html
@@ -1,50 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <title>Team Profile Generator</title>
-</head>
-<body>
-  <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h3>Current Team</h3>
-    <ul class="list-group">
-    <li class="list-group-item"><div class="card col-3 mb-3">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>The Red Robins</title>
+  </head>
+  <body>
+    <header>
+        <h1>Welcome to The Red Robins's team!</h1>
+    </header>  
+    <hr>
+    <main class="container">
+            <div class="row ">
+              <div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Steven</h1>
+          <h1 class="card-title">Kerry Terry</h1>
           <h4 class="card-subtitle">Manager</h4>
           <ul class="card-text">
-              <li><strong>ID #: </strong>12</li>
-              <li><strong>Email: </strong>steven@gmail.com</li>
-              <li><strong>Office #: </strong>826</li>
-              <li><strong>Github Username: </strong>stevenrocks</li>
+              <li><strong>ID #: </strong>2</li>
+              <li><strong>Email: </strong>KT@gmail.com</li>
+              <li><strong>Office #: </strong>25</li>
           </ul>
       </div>
   </div><div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Samantha</h1>
+          <h1 class="card-title">Georgina Smith</h1>
           <h4 class="card-subtitle">Engineer</h4>
           <ul class="card-text">
-              <li><strong>ID #: </strong>42</li>
-              <li><strong>Email: </strong>samantharules@gmail.com</li>
-              <li><strong>Github Username: </strong>samantharules</li>
+              <li><strong>ID #: </strong>55</li>
+              <li><strong>Email: </strong>GG@gmail.com</li>
+              <li><strong>Github Username: </strong>georginas</li>
           </ul>
       </div>
   </div><div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Roberto</h1>
+          <h1 class="card-title">Steven Fullerton</h1>
           <h4 class="card-subtitle">Intern</h4>
           <ul class="card-text">
-              <li><strong>ID: </strong>283471</li>
-              <li><strong>Email: </strong>robertointern@gmail.com</li>
-              <li><strong>School: </strong>UW</li>
+              <li><strong>ID: </strong>1000</li>
+              <li><strong>Email: </strong>stevenf@gmail.com</li>
+              <li><strong>School: </strong>UCLA</li>
           </ul>
       </div>
-  </div></li>
-    </ul>
   </div>
-</div>
-</body>
+            </div>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
