--- a/index.html
+++ b/index.html
@@ -8,46 +8,51 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>The Red Robins</title>
+    <title>Seattle Segulls</title>
   </head>
   <body>
-    <header>
-        <h1>Welcome to The Red Robins's team!</h1>
-    </header>  
-    <hr>
+  <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 jumbotron mb-3 team-heading">
+                <h1 class="text-center">Seattle Segulls</h1>
+            </div>
+        </div>
+    </div>
     <main class="container">
             <div class="row ">
-              <div class="card col-3 mb-3">
+                <<div class="team-area col-12 d-flex justify-content-center">
+                    <div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Kerry Terry</h1>
+          <h1 class="card-title">Reid Flamm</h1>
           <h4 class="card-subtitle">Manager</h4>
           <ul class="card-text">
-              <li><strong>ID #: </strong>2</li>
-              <li><strong>Email: </strong>KT@gmail.com</li>
-              <li><strong>Office #: </strong>25</li>
+              <li><strong>ID #: </strong>1</li>
+              <li><strong>Email: </strong>reid@reid.com</li>
+              <li><strong>Office #: </strong>12</li>
           </ul>
       </div>
   </div><div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Georgina Smith</h1>
+          <h1 class="card-title">Ricky Ricardo</h1>
           <h4 class="card-subtitle">Engineer</h4>
           <ul class="card-text">
               <li><strong>ID #: </strong>55</li>
-              <li><strong>Email: </strong>GG@gmail.com</li>
-              <li><strong>Github Username: </strong>georginas</li>
+              <li><strong>Email: </strong>ricky@ricky.com</li>
+              <li><strong>Github Username: </strong>rickyricardo</li>
           </ul>
       </div>
   </div><div class="card col-3 mb-3">
       <div class="card-body">
-          <h1 class="card-title">Steven Fullerton</h1>
+          <h1 class="card-title">Kim Karen</h1>
           <h4 class="card-subtitle">Intern</h4>
           <ul class="card-text">
               <li><strong>ID: </strong>1000</li>
-              <li><strong>Email: </strong>stevenf@gmail.com</li>
+              <li><strong>Email: </strong>kim@karen.com</li>
               <li><strong>School: </strong>UCLA</li>
           </ul>
       </div>
   </div>
+                 </div>
             </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
